--- a/index.html
+++ b/index.html
@@ -4,115 +4,220 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Style css -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- modern-normolize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="" target="_blank">Studio</a></li>
-          <li><a href="" target="_blank">Portfolio</a></li>
-          <li><a href="" target="_blank">Contacts</a></li>
+    <header class="main-header">
+      <nav class="main-nav">
+        <a href="./index.html" class="logotype"
+          ><span class="logo">Web</span><span class="logo2">Studio</span></a
+        >
+        <ul class="list-nav">
+          <li class="list-nav-item">
+            <a href="" target="_blank" class="list-nav-link">Studio</a>
+          </li>
+          <li class="list-nav-item">
+            <a href="" target="_blank" class="list-nav-link">Portfolio</a>
+          </li>
+          <li class="list-nav-item">
+            <a href="" target="_blank" class="list-nav-link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list-address">
+          <li class="list-address-item">
+            <a href="mailto:info@devstudio.com" class="list-address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="list-address-item">
+            <a href="tel:+110001111111" class="list-address-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-
-        <button type="button">Order Service</button>
+      <!-- title -->
+      <section class="main-title">
+        <h1 class="main-title-h1">
+          Effective Solutions<br />for Your Business
+        </h1>
+        <button type="button" class="main-button">Order Service</button>
       </section>
-      <section>
-        <h2>111</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <!-- our-priorities -->
+      <section class="section-priorotet">
+        <h2 class="section-priorotet-title">111</h2>
+        <ul class="section-priorotet-list">
+          <li class="section-priorotet-list">
+            <h3 class="section-project-h3">Strategy</h3>
+            <p class="section-priorotet-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="section-priorotet-list">
+            <h3 class="section-project-h3">Punctuality</h3>
+            <p class="section-priorotet-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="section-priorotet-list">
+            <h3 class="section-project-h3">Diligence</h3>
+            <p class="section-priorotet-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="section-priorotet-list">
+            <h3 class="section-project-h3">Technologies</h3>
+            <p class="section-priorotet-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- our-team -->
+      <section class="section-team">
+        <h2 class="section-team-title">Our Team</h2>
+        <ul class="section-team-list">
+          <li class="section-team-list-item">
             <img
-              src="./images/img4.jpg"
+              src="./images/designer.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
               height="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-team-name" class="section-team-text">
+              Mark Guerrero
+            </h3>
+            <p class="section-team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="section-team-list-item">
             <img
-              src="./images/img.jpg"
+              src="./images/developer.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
               height="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-team-name">Tom Ford</h3>
+            <p class="section-team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-team-list-item">
             <img
-              src="./images/img2.jpg"
+              src="./images/marketing.jpg"
               alt="Camila Garsia Marketing"
               width="264"
               height="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-team-name">Camila Garcia</h3>
+            <p class="section-team-text">Marketing</p>
           </li>
-          <li>
+          <li class="section-team-list-item">
             <img
-              src="./images/img3.jpg"
+              src="./images/uidesigner.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
               height="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-team-name">Daniel Wilson</h3>
+            <p class="section-team-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- our-portfolio -->
+      <section class="section-portfolio">
+        <h2 class="section-portfolio-title">Our Portfolio</h2>
+        <ul class="section-portfolio-list">
+          <li class="section-portfolio-list-item">
+            <img
+              src="./images/banking.jpg"
+              alt="Banking App"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-portfolio-list-title">Banking App</h3>
+            <p class="section-portfolio-list-text">App</p>
+          </li>
+          <li class="section-portfolio-list-item">
+            <img
+              src="./images/cachless.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-portfolio-list-title">Cashless Payment</h3>
+            <p class="section-portfolio-list-text">Marketing</p>
+          </li>
+          <li class="section-portfolio-list-item">
+            <img
+              src="./images/meditation.jpg"
+              alt="Meditation App"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-portfolio-list-title">Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li class="section-portfolio-list-item">
+            <img
+              src="./images/taxi.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-portfolio-list-title">Taxi Service</h3>
+            <p class="section-portfolio-list-text">Marketing</p>
+          </li>
+          <li class="section-portfolio-list-item">
+            <img
+              src="./images/skrin.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-portfolio-list-title">Screen Illustrations</h3>
+            <p class="section-portfolio-list-text">Design</p>
+          </li>
+          <li class="section-portfolio-list-item">
+            <img
+              src="./images/online.jpg"
+              alt="Online Courses"
+              width="360"
+              height="420"
+            />
+            <h3 class="section-portfolio-list-title">Online</h3>
+            <p class="section-portfolio-list-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="main-footer">
+      <a href="./index.html" class="main-footer-links"
+        ><span class="logo-footer">Web</span
+        ><span class="logo-footer2">Studio</span></a
+      >
 
-      <p>
+      <p class="main-footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
