--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="main-header">
       <nav class="main-nav">
         <a href="./index.html" class="logotype"
-          ><span class="logo">Web</span><span class="logo2">Studio</span></a
+          >Web<span class="logotype-studio">Studio</span></a
         >
         <ul class="list-nav">
           <li class="list-nav-item">
@@ -33,12 +33,14 @@
             <a href="" target="_blank" class="list-nav-link">Portfolio</a>
           </li>
           <li class="list-nav-item">
-            <a href="" target="_blank" class="list-nav-link">Contacts</a>
+            <a href="./index.html" target="_blank" class="list-nav-link"
+              >Contacts</a
+            >
           </li>
         </ul>
       </nav>
 
-      <address>
+      <address class="header-address">
         <ul class="list-address">
           <li class="list-address-item">
             <a href="mailto:info@devstudio.com" class="list-address-link"
@@ -106,9 +108,7 @@
               width="264"
               height="264"
             />
-            <h3 class="section-team-name" class="section-team-text">
-              Mark Guerrero
-            </h3>
+            <h3 class="section-team-text">Mark Guerrero</h3>
             <p class="section-team-text">Product Designer</p>
           </li>
           <li class="section-team-list-item">
@@ -204,7 +204,7 @@
               width="360"
               height="420"
             />
-            <h3 class="section-portfolio-list-title">Online</h3>
+            <h3 class="section-portfolio-list-title">Online Courses</h3>
             <p class="section-portfolio-list-text">Marketing</p>
           </li>
         </ul>
@@ -213,8 +213,7 @@
 
     <footer class="main-footer">
       <a href="./index.html" class="main-footer-links"
-        ><span class="logo-footer">Web</span
-        ><span class="logo-footer2">Studio</span></a
+        >Web <span class="logo-footer">Studio</span></a
       >
 
       <p class="main-footer-text">
