--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         >
         <ul class="list-nav">
           <li class="list-nav-item">
-            <a href="" target="_blank" class="list-nav-link">Studio</a>
+            <a href="./index.html" target="_blank" class="list-nav-link"
+              >Studio</a
+            >
           </li>
           <li class="list-nav-item">
             <a href="" target="_blank" class="list-nav-link">Portfolio</a>
           </li>
           <li class="list-nav-item">
-            <a href="./index.html" target="_blank" class="list-nav-link"
-              >Contacts</a
-            >
+            <a href="" target="_blank" class="list-nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
