--- a/index.html
+++ b/index.html
@@ -58,39 +58,39 @@
     <main>
       <!-- title -->
       <section class="main-title">
-        <h1 class="main-title-h1">
+        <h1 class="main-title-page">
           Effective Solutions<br />for Your Business
         </h1>
         <button type="button" class="main-button">Order Service</button>
       </section>
-      <!-- our-priorities -->
-      <section class="section-priorotet">
-        <h2 class="section-priorotet-title">111</h2>
-        <ul class="section-priorotet-list">
-          <li class="section-priorotet-list">
+      <!-- our-project -->
+      <section class="section-project">
+        <h2 class="section-project-title">111</h2>
+        <ul class="section-project-list">
+          <li class="section-project-list">
             <h3 class="section-project-h3">Strategy</h3>
-            <p class="section-priorotet-text">
+            <p class="section-project-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="section-priorotet-list">
+          <li class="section-project-list">
             <h3 class="section-project-h3">Punctuality</h3>
-            <p class="section-priorotet-text">
+            <p class="section-project-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="section-priorotet-list">
+          <li class="section-project-list">
             <h3 class="section-project-h3">Diligence</h3>
-            <p class="section-priorotet-text">
+            <p class="section-project-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="section-priorotet-list">
+          <li class="section-project-list">
             <h3 class="section-project-h3">Technologies</h3>
-            <p class="section-priorotet-text">
+            <p class="section-project-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -175,7 +175,7 @@
               height="420"
             />
             <h3 class="section-portfolio-list-title">Meditation App</h3>
-            <p>App</p>
+            <p class="section-portfolio-list-text">App</p>
           </li>
           <li class="section-portfolio-list-item">
             <img
