--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
         <h2 class="section-project-title">111</h2>
         <ul class="section-project-list">
           <li class="section-project-list">
-            <h3 class="section-project-h3">Strategy</h3>
+            <h3 class="section-project-title-page">Strategy</h3>
             <p class="section-project-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="section-project-list">
-            <h3 class="section-project-h3">Punctuality</h3>
+            <h3 class="section-project-title-page">Punctuality</h3>
             <p class="section-project-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="section-project-list">
-            <h3 class="section-project-h3">Diligence</h3>
+            <h3 class="section-project-title-page">Diligence</h3>
             <p class="section-project-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="section-project-list">
-            <h3 class="section-project-h3">Technologies</h3>
+            <h3 class="section-project-title-page">Technologies</h3>
             <p class="section-project-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -108,7 +108,7 @@
               width="264"
               height="264"
             />
-            <h3 class="section-team-text">Mark Guerrero</h3>
+            <h3 class="section-team-name">Mark Guerrero</h3>
             <p class="section-team-text">Product Designer</p>
           </li>
           <li class="section-team-list-item">
@@ -145,7 +145,7 @@
       </section>
       <!-- our-portfolio -->
       <section class="section-portfolio">
-        <h2 class="section-portfolio-title">Our Portfolio</h2>
+        <h2 class="section-title-portfolio">Our Portfolio</h2>
         <ul class="section-portfolio-list">
           <li class="section-portfolio-list-item">
             <img
